apps/base/trek/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trek
  namespace: trek
spec:
  selector:
    app: trek
  ports:
    - port: 3000
      targetPort: 3000
